[gd_scene load_steps=6 format=3 uid="uid://b0vkihtivm8jv"]

[ext_resource type="Script" path="res://src/ui/title.gd" id="1_owugn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8tjvp"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6tuh8"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xhpb3"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_83xej"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_owugn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -324.0
offset_right = 1.0
offset_bottom = -146.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 128
text = "tuuna RPG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FormControl" type="Control" parent="ColorRect"]
anchors_preset = 0
offset_top = 36.0
offset_right = 40.0
offset_bottom = 76.0

[node name="UsernameEdit" type="LineEdit" parent="ColorRect/FormControl"]
layout_mode = 0
offset_left = 267.0
offset_top = 310.0
offset_right = 946.0
offset_bottom = 379.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_8tjvp")
placeholder_text = "username"
alignment = 1

[node name="PasswordEdit" type="LineEdit" parent="ColorRect/FormControl"]
layout_mode = 0
offset_left = 267.0
offset_top = 399.0
offset_right = 946.0
offset_bottom = 468.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_6tuh8")
placeholder_text = "password"
alignment = 1

[node name="LoginBtn" type="Button" parent="ColorRect/FormControl"]
layout_mode = 0
offset_left = 267.0
offset_top = 496.0
offset_right = 945.0
offset_bottom = 571.0
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_xhpb3")
text = "로그인"

[node name="RegisterBtn" type="Button" parent="ColorRect/FormControl"]
layout_mode = 0
offset_left = 269.0
offset_top = 588.0
offset_right = 947.0
offset_bottom = 663.0
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_83xej")
text = "회원가입"

[connection signal="pressed" from="ColorRect/FormControl/LoginBtn" to="." method="_on_login_btn_pressed"]
[connection signal="pressed" from="ColorRect/FormControl/RegisterBtn" to="." method="_on_register_btn_pressed"]
